# bagCoin-mobile

./: .dockerignore  .env.example  .env.prod.example  .gitignore  AGENTS.md  CLAUDE.md  DEPLOY_VELOZ.md  Dockerfile.server  Dockerfile.web  GEMINI.md  KIMI.md  Makefile  README.md  app.json  babel.config.js  bts.jsonc  build-and-push.sh  deploy.sh  docker-compose.deploy.yml  docker-compose.dev.yml  docker-compose.frontend.yml  docker-compose.prod.yml  docker-compose.yml  image.d.ts  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  veloz.json  veloz.json.example
app/: _layout.tsx  (+1 more)
apps/server/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.worker  README.md  package.json  pyproject.toml  tsconfig.json  tsdown.config.ts
apps/server/alembic/: env.py
apps/server/alembic/versions/: 2026-04-30_initial_migration.py  2026-05-02_add_budget_type_and_nullable_category.py  2026-05-02_add_google_auth_and_phone.py  2026-05-03_add_accounts_and_credit_cards.py  2026-05-04_add_integration_link_tokens.py  (+12 more)
apps/server/app/: main.py
apps/server/cli/: commands.py
apps/server/scripts/: entrypoint.sh
apps/server/src/: celery_app.py  check_context.py  config.py  database.py  index.ts  logging_config.py  main.py  metrics.py  models.py
apps/server/tests/: conftest.py  test_agent_financial_creation.py  test_agents.py  test_budget_rest_service.py  test_category_rest_service.py  test_core.py  test_deep_research.py  test_integration_bot_config.py  test_integration_service.py  test_migrations.py  test_multimodal_agent.py  test_nodes.py  test_phase2.py  test_phase3.py  test_phase4.py  test_repositories.py  test_services.py  test_services_conversation.py  test_transaction_rest_service.py  test_whatsapp_agent.py  test_wizard_budget.py  test_worker.py
(+816 files in other folders)
