[project]
name = "agent-finance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.2",
    "langgraph>=1.1.6",
    "ofxtools>=0.9.5",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "pdfplumber>=0.11.9",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "python-magic>=0.4.27",
    "reportlab>=4.4.10",
    "sqlmodel>=0.0.38",
    "tavily-python>=0.7.23",
    "uvicorn>=0.44.0",
    "whatsapp-api-client-python>=0.0.53",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
]
